banner section added

--- a/index.html
+++ b/index.html
@@ -12,36 +12,55 @@
       rel="stylesheet"
     />
     <!-- link CSS -->
-     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body class="inter-font">
     <header>
-        <!-- nav start -->
-         <nav class="container">
-            <div class="logo">
-                <img src="./assets/logo-navbar.png" alt="">
-            </div>
+      <!-- nav start -->
+      <nav class="container">
+        <div class="logo">
+          <img src="./assets/logo-navbar.png" alt="" />
+        </div>
 
-            <div class="list">
-                <li>Features</li>
-                <li>How It Works</li>
-                <li>Why It's Different</li>
-            </div>
+        <div class="list">
+          <li>Features</li>
+          <li>How It Works</li>
+          <li>Why It's Different</li>
+        </div>
 
-            <div>
-                <button class="btn">Get Early Access</button>
-            </div>
-         </nav>
-         <!-- nav end -->
-          
+        <div>
+          <button class="btn">Get Early Access</button>
+        </div>
+      </nav>
+      <!-- nav end -->
+
+      <!-- hero banner start -->
+      <section id="banner-img">
+        <div class="hero-banner container">
+          <div>
+            <button class="btn-2">Early Access Now Open</button>
+          </div>
+          <h1>
+            Structured thinking,<br />
+            <span class="color">Not just note-taking.</span>
+          </h1>
+          <p>
+            A private space to store notes, links, and learning summaries —
+            designed to <br />
+            help you think clearly, connect ideas, and turn learning into
+            long-term knowledge.
+          </p>
+          <div>
+            <button class="btn">Start Building Your Vault</button>
+            <button class="btn">See How It Works</button>
+          </div>
+        </div>
+      </section>
+      <!-- hero banner end -->
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
