note section added

--- a/index.html
+++ b/index.html
@@ -59,7 +59,60 @@
       <!-- hero banner end -->
     </header>
 
-    <main></main>
+    <main>
+      <!-- note section start -->
+      <section id="note" class="container">
+        <!-- note content -->
+        <div class="note-content">
+          <h2>Notes don't fail, Structure does.</h2>
+          <p>
+            You're not bad at learning. Your tools just weren't built for how
+            knowledge actually works.
+          </p>
+        </div>
+        <!-- note card -->
+        <div class="card-container">
+          <!-- card -->
+          <div class="card">
+            <div class="card-img">
+              <div class="circle">
+                <img src="./assets/Vector.png" alt="" />
+              </div>
+            </div>
+            <h3>Scattered notes</h3>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+          </div>
+          <div class="card">
+           <div class="card-img">
+              <div class="circle">
+                <img src="./assets/Vector.png" alt="" />
+              </div>
+            </div>
+            <h3>Scattered notes</h3>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <div class="circle">
+                <img src="./assets/Vector.png" alt="" />
+              </div>
+            </div>
+            <h3>Scattered notes</h3>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <div class="circle">
+                <img src="./assets/Vector.png" alt="" />
+              </div>
+            </div>
+            <h3>Scattered notes</h3>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+          </div>
+        </div>
+      </section>
+      <!-- note section end -->
+    </main>
 
     <footer></footer>
   </body>
