brain section added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p>Your ideas live in 10 different apps, none of them connected.</p>
           </div>
           <div class="card">
-           <div class="card-img">
+            <div class="card-img">
               <div class="circle">
                 <img src="./assets/Vector.png" alt="" />
               </div>
@@ -112,6 +112,27 @@
         </div>
       </section>
       <!-- note section end -->
+
+      <!-- brain section start -->
+      <section id="brain">
+        <div class="brain-container container">
+          <div class="img">
+            <img src="./assets/knowledge.png" alt="" />
+          </div>
+          <div class="brain-content">
+            <h6>The SOLUTION</h6>
+            <h2>Your second brain, structured by design.</h2>
+            <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+            <div>
+                <li>Capture ideas with structure built-in from day one</li>
+                <li>Connect related concepts automatically as you write</li>
+                <li>Build lasting knowledge through reflection prompts</li>
+                <li>Find anything instantly with semantic search</li>
+            </div>
+        </div>
+      </section>
+      <!-- brain section end -->
+       
     </main>
 
     <footer></footer>
