footer section added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- font icon -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- link CSS -->
     <link rel="stylesheet" href="styles/styles.css" />
+
   </head>
   <body class="inter-font">
     <header>
@@ -121,20 +126,60 @@
           </div>
           <div class="brain-content">
             <h6>The SOLUTION</h6>
-            <h2>Your second brain, structured by design.</h2>
-            <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+            <h2>Your Second Brain, Structured By Design.</h2>
+            <p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
             <div>
-                <li>Capture ideas with structure built-in from day one</li>
-                <li>Connect related concepts automatically as you write</li>
-                <li>Build lasting knowledge through reflection prompts</li>
-                <li>Find anything instantly with semantic search</li>
+                <li><i class="fa-solid fa-check"></i>Capture ideas with structure built-in from day one</li>
+                <li><i class="fa-solid fa-check"></i>Connect related concepts automatically as you write</li>
+                <li><i class="fa-solid fa-check"></i>Build lasting knowledge through reflection prompts</li>
+                <li><i class="fa-solid fa-check"></i>Find anything instantly with semantic search</li>
             </div>
         </div>
       </section>
       <!-- brain section end -->
-       
+
+      <!-- ready section start -->
+       <section id="ready">
+        <div class="ready-content container">
+            <h2>Ready To Think More Clearly?</h2>
+            <p>Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.</p>
+            <button class="btn">Get Early Access</button>
+            <div class="ready-list">
+                <li style="list-style: none;">Free during early access</li>
+                <li>No credit card needed</li>
+            </div>
+        </div>
+       </section>
+       <!-- ready section end -->
     </main>
 
-    <footer></footer>
+    <footer>
+        <section id="footer">
+          <!-- footer section start -->
+            <div class="footer-section container">
+                <!-- footer container -->
+                <div class="footer-container">
+                  <!-- footer logo -->
+                   <div class="footer-logo">
+                    <img src="./assets/logo-footer.png" alt="">
+                   </div>
+                   <!-- social links -->
+                    <div class="social-link">
+                      <h3>Social Links</h3>
+                      <div class="icon">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                        <i class="fa-brands fa-square-linkedin"></i>
+                        <i class="fa-brands fa-square-facebook"></i>
+                      </div>
+                    </div>
+                </div>
+                <div class="horizontal">
+                  <hr>
+                </div>
+                <small class="small"> &copy; 2026 Personal Knowledge Vault. All rights reserved.</small>
+            </div>
+                   
+        </section>
+    </footer>
   </body>
 </html>
