added icon and fix some issues

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <section id="banner-img">
         <div class="hero-banner container">
           <div>
-            <button class="btn-2">Early Access Now Open</button>
+            <button class="btn-2"> <img src="./assets/circle.png" alt=""> Early Access Now Open</button>
           </div>
           <h1>
-            Structured thinking,<br />
-            <span class="color">Not just note-taking.</span>
+            Structured Thinking,<br />
+            <span class="color">Not Just Note-Taking.</span>
           </h1>
           <p>
             A private space to store notes, links, and learning summaries —
@@ -56,8 +56,8 @@
             long-term knowledge.
           </p>
           <div>
-            <button class="btn">Start Building Your Vault</button>
-            <button class="btn">See How It Works</button>
+            <button class="btn">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i></button>
+            <button class="btn btn-3"><i class="fa-solid fa-play"></i> See How It Works</button>
           </div>
         </div>
       </section>
@@ -69,7 +69,7 @@
       <section id="note" class="container">
         <!-- note content -->
         <div class="note-content">
-          <h2>Notes don't fail, Structure does.</h2>
+          <h2>Notes Don't Fail, Structure Does.</h2>
           <p>
             You're not bad at learning. Your tools just weren't built for how
             knowledge actually works.
@@ -84,35 +84,35 @@
                 <img src="./assets/Vector.png" alt="" />
               </div>
             </div>
-            <h3>Scattered notes</h3>
+            <h3>Scattered Notes</h3>
             <p>Your ideas live in 10 different apps, none of them connected.</p>
           </div>
           <div class="card">
             <div class="card-img">
               <div class="circle">
-                <img src="./assets/Vector.png" alt="" />
+                <img src="./assets/Bookmarks.png" alt="" />
               </div>
             </div>
-            <h3>Scattered notes</h3>
-            <p>Your ideas live in 10 different apps, none of them connected.</p>
+            <h3>Bookmark Overload</h3>
+            <p>Hundreds of saved links you'll never revisit or remember.</p>
           </div>
           <div class="card">
             <div class="card-img">
               <div class="circle">
-                <img src="./assets/Vector.png" alt="" />
+                <img src="./assets/Brain.png" alt="" />
               </div>
             </div>
-            <h3>Scattered notes</h3>
-            <p>Your ideas live in 10 different apps, none of them connected.</p>
+            <h3>No Idea Connections</h3>
+            <p>Insights stay isolated, never building into bigger understanding.</p>
           </div>
           <div class="card">
             <div class="card-img">
               <div class="circle">
-                <img src="./assets/Vector.png" alt="" />
+                <img src="./assets/Info.png" alt="" />
               </div>
             </div>
-            <h3>Scattered notes</h3>
-            <p>Your ideas live in 10 different apps, none of them connected.</p>
+            <h3>Forgetting What You Learned</h3>
+            <p>Knowledge fades because there's no system to retain it.</p>
           </div>
         </div>
       </section>
@@ -143,7 +143,7 @@
         <div class="ready-content container">
             <h2>Ready To Think More Clearly?</h2>
             <p>Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.</p>
-            <button class="btn">Get Early Access</button>
+            <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
             <div class="ready-list">
                 <li style="list-style: none;">Free during early access</li>
                 <li>No credit card needed</li>
@@ -178,7 +178,7 @@
                 </div>
                 <small class="small"> &copy; 2026 Personal Knowledge Vault. All rights reserved.</small>
             </div>
-                   
+          <!-- footer section end  -->
         </section>
     </footer>
   </body>
