--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
             <h2>Your Second Brain, Structured By Design.</h2>
             <p>Personal Knowledge Vault isn't another note-taking app. z <br> It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
             <div>
-                <li><i class="fa-solid fa-check"></i>Capture ideas with structure built-in from day one</li>
-                <li><i class="fa-solid fa-check"></i>Connect related concepts automatically as you write</li>
-                <li><i class="fa-solid fa-check"></i>Build lasting knowledge through reflection prompts</li>
-                <li><i class="fa-solid fa-check"></i>Find anything instantly with semantic search</li>
+                <li><i class="fa-solid fa-circle-check"></i>Capture ideas with structure built-in from day one</li>
+                <li><i class="fa-solid fa-circle-check"></i>Connect related concepts automatically as you write</li>
+                <li><i class="fa-solid fa-circle-check"></i>Build lasting knowledge through reflection prompts</li>
+                <li><i class="fa-solid fa-circle-check"></i>Find anything instantly with semantic search</li>
             </div>
         </div>
       </section>
